# drone-video-link

./: .gitattributes  .gitignore  README.md
dashboard/: README.md  demo_flight.py  index.html  loss.sh  run.sh  server.py  stop.sh
docs/: 00-OVERVIEW.md  01-PLAN.md  02-STATE.md  03-ARCHITECTURE.md  04-CONCEPTS.md  05-DECISIONS.md  06-INTERVIEW-QA.md  07-INTERVIEW-FUNDAMENTALS.md
docs/Report/: Application_Template_Report.tex  Drone_Video_Link_Report.tex  ai_conquer2026.cls  references.bib  tvietlistings.sty  vipythonhighlight.sty
mavlink/: README.md  requirements.txt
mavlink/gateway/: __init__.py  cli.py  commands.py  connection.py  mqtt_bridge.py  telemetry.py  watchdog.py
mavlink/logs/: telemetry.sample.csv  telemetry.sample.jsonl
mavlink/scripts/: mock_fc.py  run-sitl.sh
mavlink/tests/: test_watchdog.py
video/: CMakeLists.txt  README.md
video/results/: latency.md  packet-loss.md
video/scripts/: capture-frames.sh  common.sh  demo.sh  frame-diff.sh  gop-stats.sh  idr-vs-p.sh  make-stream.sh  measure-latency.sh  netem.sh  packet-loss.sh  pattern-damage.sh  receiver.sh  record-demo.sh  sender.sh
video/src/: receiver.cpp
